--- a/InsumosJsp/web/WEB-INF/web.xml
+++ b/InsumosJsp/web/WEB-INF/web.xml
@@ -4,9 +4,17 @@
         <servlet-name>Login</servlet-name>
         <servlet-class>controlador.Login</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ControladorA</servlet-name>
+        <servlet-class>controlador.ControladorA</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/Login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ControladorA</servlet-name>
+        <url-pattern>/ControladorA</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
