--- a/InsumosJsp/nbproject/private/private.properties
+++ b/InsumosJsp/nbproject/private/private.properties
@@ -1,4 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Pc_Estiven\\AppData\\Roaming\\NetBeans\\12.6\\tomcat90.properties
+deploy.ant.properties.file=C:\\Users\\serdn\\AppData\\Roaming\\NetBeans\\12.6\\tomcat90.properties
 j2ee.server.home=C:/apache-tomcat-10.0.20
 j2ee.server.instance=tomcat90:home=C:\\apache-tomcat-10.0.20
-user.properties.file=C:\\Users\\Pc_Estiven\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
+user.properties.file=C:\\Users\\serdn\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
