--- a/InsumosJsp/web/WEB-INF/web.xml
+++ b/InsumosJsp/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>ControladorA</servlet-name>
         <servlet-class>controlador.ControladorA</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CategoriaControl</servlet-name>
+        <servlet-class>controlador.CategoriaControl</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/Login</url-pattern>
@@ -15,6 +19,10 @@
     <servlet-mapping>
         <servlet-name>ControladorA</servlet-name>
         <url-pattern>/ControladorA</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CategoriaControl</servlet-name>
+        <url-pattern>/CategoriaControl</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
