--- a/InsumosJsp/web/WEB-INF/web.xml
+++ b/InsumosJsp/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>CategoriaControl</servlet-name>
         <servlet-class>controlador.CategoriaControl</servlet-class>
     </servlet>
+        <servlet>
+        <servlet-name>PresentacionControl</servlet-name>
+        <servlet-class>controlador.PresentacionControl</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/Login</url-pattern>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>CategoriaControl</servlet-name>
         <url-pattern>/CategoriaControl</url-pattern>
+    </servlet-mapping>
+        <servlet-mapping>
+        <servlet-name>PresentacionControl</servlet-name>
+        <url-pattern>/PresentacionControl</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
