eliminacion de vistas y creacion Crud
se crea Crud de Marca y Riesgo

--- a/InsumosJsp/nbproject/private/private.properties
+++ b/InsumosJsp/nbproject/private/private.properties
@@ -3,5 +3,5 @@ j2ee.server.home=C:/apache-tomcat-10.0.20
 j2ee.server.instance=tomcat90:home=C:\\apache-tomcat-10.0.20
 javac.debug=true
 javadoc.preview=true
-selected.browser=SL[/Browsers/FirefoxBrowser
+selected.browser=Chrome
 user.properties.file=C:\\Users\\Pc_Estiven\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
