--- a/InsumosJsp/web/WEB-INF/web.xml
+++ b/InsumosJsp/web/WEB-INF/web.xml
@@ -52,6 +52,10 @@
         <servlet-name>ProveedorControl</servlet-name>
         <servlet-class>controlador.ProveedorControl</servlet-class>
     </servlet>
+        <servlet>
+        <servlet-name>EntradaInsumoControl</servlet-name>
+        <servlet-class>controlador.EntradaInsumoControl</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/Login</url-pattern>
@@ -103,6 +107,10 @@
     <servlet-mapping>
         <servlet-name>ProveedorControl</servlet-name>
         <url-pattern>/ProveedorControl</url-pattern>
+    </servlet-mapping>
+        <servlet-mapping>
+        <servlet-name>EntradaInsumoControl</servlet-name>
+        <url-pattern>/EntradaInsumoControl</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
